--- a/example.env
+++ b/example.env
@@ -3,7 +3,6 @@ export GOOGLE_CLIENT_SECRET=
 export SECRET_KEY_BASE=
 export MIX_ENV=
 export PORT=
-export ASTRA_USERNAME=
-export ASTRA_PASSWORD=
+export ASTRA_DB_APPLICATION_TOKEN=
 export ASTRA_ID=
 export ASTRA_REGION=
